--- a/251231/.classpath
+++ b/251231/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="card2"/>
 	<classpathentry kind="src" path="Starbucks"/>
 	<classpathentry kind="src" path="Samsung"/>
+	<classpathentry kind="src" path="sigleton"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
