--- a/dfs/.project
+++ b/dfs/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MUSIC_JDBC2</name>
+	<name>dfs</name>
 	<comment></comment>
 	<projects>
 	</projects>
